--- a/login.css
+++ b/login.css
@@ -34,7 +34,13 @@
         
         .logo {
             width: 250px;
-            height: 250px;
+            height: 250px;  
+        }
+        .img{
+            width: 500px;
+            position: relative;
+            right: 125px;
+            bottom: 60px;
         }
         
         .login-container {
