--- a/loginpt2.css
+++ b/loginpt2.css
@@ -38,8 +38,8 @@
         }
         
         .logo {
-            width: 100%;
-            max-width: 240px;
+            width: 500px;
+            
         }
         
         .content-section {
